# TM4C-Raw-Template

./: .clang-format  .gitignore  CMakeLists.txt  README.md
cmake/: arm-none-eabi.cmake
device/: TM4C123GH6PM.ld
device/startup/: startup.c  startup.h
include/: README.md
src/: main.c
